# keyremap

./: config.example  meson.build
src/: code2str.txt  config.cpp  config.hpp  input-viewer.cpp  keycodes.hpp  logger.hpp  main.cpp  str2code.txt  types.hpp  uinput.cpp  uinput.hpp
src/util/: charconv.hpp  error.hpp  fd.hpp  meson.build  misc.hpp  process.hpp  thread.hpp  variant.hpp
tools/: generate-keycodes.py
